--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>tn.esprit.spring</groupId>
 	<artifactId>timesheet</artifactId>
 	<version>1.0</version>
+	<packaging>war</packaging>
 	<name>timesheet</name>
 	<description>timesheet</description>
 
@@ -96,6 +97,11 @@
 			<version>1.16.16</version>
 		</dependency>
 		<!-- JSF -->
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
 
 	</dependencies>
 
