fix cocker and war's packaging

--- a/bin/src/main/webapp/WEB-INF/web.xml
+++ b/bin/src/main/webapp/WEB-INF/web.xml
@@ -10,11 +10,11 @@
         <url-pattern>*.jsf</url-pattern> <!-- *.xhtml *.faces -->
     </servlet-mapping>
 
-    <!--<listener>
+    <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
     <listener>
         <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
-    </listener>-->
+    </listener>
 
 </web-app>
