add unit test and remove the web.xml listeners

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,10 @@ spring.mvc.view.prefix=/views/
 spring.mvc.view.suffix=.jsp
 
 #Server configuration
-server.servlet.context-path=/SpringMVC
+server.servlet.context-path=/
 spring.mvc.servlet.path=/servlet
  
-server.port=8081
+server.port=8082
 
 ### DATABASE ###
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -26,4 +26,3 @@ logging.level.com.zaxxer.hikari=warn
 logging.level.org.springframework=warn 
 logging.level.root=INFO
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %-5level - %logger{60} - %msg%n
-
