--- a/pom.xml
+++ b/pom.xml
@@ -97,12 +97,21 @@
 			<version>1.16.16</version>
 		</dependency>
 		<!-- JSF -->
+		<!-- LOG4J -->
+		<!-- https://mvnrepository.com/artifact/log4j/log4j -->
+
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
+			<version>1.2.16</version>
 		</dependency>
 
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 
